--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,9 +4,6 @@
 <head>
 	<meta charset="utf-8">
 	<title>Custom Activity</title>
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script data-main="js/main.js" type="text/javascript" src="js/require.js"></script>
-
 	<style type="text/css">
 		body {
 			padding: 15px;
@@ -53,5 +50,9 @@
 </head>
 <body>
 	<div>Welcome to index page of Custom activity</div>
+	
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script data-main="js/main.js" type="text/javascript" src="js/require.js"></script>
+	<script type="text/javascript"  src="static/customActivity.js"></script>
 </body>
 </html>
